# diana-tucker

./: .gitconfig  .gitignore  .gitmodules  .rankfile.swp  CMakeLists.txt  README.md  job.sh  main.cpp  make.sh  run.sh  spmain.cpp  wmenv.sh
doc/: Doxyfile
include/: algorithm.hpp  communicator.hpp  def.hpp  distribution.hpp  function.hpp  logger.hpp  operator.hpp  read_data.hpp  sp_operator.hpp  sp_tensor.hpp  summary.hpp  tensor.hpp  util.hpp
include/quantum/: circuit.hpp  gate.hpp  qregister.hpp
src/: communicator.cpp  distribution.cpp  logger.cpp  read_data.cpp  summary.cpp  util.cpp
src/operator/: operator_complex64.cpp  operator_double.cpp  operator_float.cpp
src/quantum/: circuit.cpp  gate.cpp  qregister.cpp  schrodinger_qregister.cpp  subspace_cp_qregister.cpp
template/: communicator.tpp  sp_tensor_mpi.tpp  tensor_mpi.tpp
template/algorithm/: grqi.tpp
template/algorithm/sp_tucker/: sp_hooi_als.tpp
template/algorithm/tucker/: hooi_als.tpp
template/function/: matrix.tpp  sp_tensor.tpp  tensor.tpp
template/operator/: operator_cpu.tpp  operator_cpu_cartesian_block.tpp
tests/: CMakeLists.txt  main.cpp
tests/testcases/function/distributed/: FunctionDistributedTest.cpp  FunctionDistributedTest.hpp  generate.py  gram.cpp  gram.py  ttm.cpp  ttm.py
washer_build/: datawasher.cpp  read_data.cpp  read_data.hpp
